--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+import ProfileImage from './components/ProfileImage.jsx'
+
 
 @custom-variant dark (&:is(.dark *));
 
